--- a/css/index.css
+++ b/css/index.css
@@ -80,13 +80,16 @@ h1, h2, h3, h4, h5 {
     .container {
         width: 90%;
     }
+}
+
+@media (max-width: 500px) {
+    .containter {
+        width: 90%;
+    }
+}
 
 header {
-	display: inline-block;
-	
-	
-}
-    
+	display: inline-block;	
 }
 
 header nav{
@@ -95,9 +98,16 @@ header nav{
 
 @media (max-width: 800px) {
     header nav{
-        display: flex;
-        flex-wrap: wrap-reverse;
-        justify-content: center;
+    display: flex;
+    flex-wrap: wrap-reverse;
+    justify-content: center;
+    }
+}
+
+@media (max-width: 500px) {
+    header nav {
+    padding-top: 0;
+    }
 }
 
 
@@ -109,8 +119,20 @@ header nav a{
 
 @media (max-width: 800px) {
     header nav a{
-        margin-top: 20px;
+    margin-top: 20px;
     }
+}
+
+@media (max-width: 500px) {
+    header nav a{
+    text-align: center;
+    width: 100%;
+    order: ;
+    border-top: 1px solid black;
+    border-bottom: 1px solid black;
+    padding: 20px;
+    margin: 0;
+   }
 }
 
 @media (max-width: 800px) {
@@ -137,8 +159,6 @@ header nav a:last-child{
 	display: inline-block;
 	width: 45%;
 	height: auto;
-	
-	
 }
 
 .top-content div.left{
@@ -176,6 +196,12 @@ header nav a:last-child{
 	display: inline-block;
 }
 
+@media (max-width: 500px) {
+    .middle-content div{
+        width: 900%;
+    }
+}
+
 .middle-img {
     width: 100%;
 }
@@ -185,8 +211,8 @@ header nav a:last-child{
 }
 
 @media (max-width: 800px) {
-    .about{
-        width: 100%;
+    .bottom-content {
+    display: flex;
     }
 }
 
@@ -199,6 +225,12 @@ header nav a:last-child{
 	margin-top: 20px;
 	margin-bottom: 20px;
 	display: inline-block;
+}
+
+@media (max-width: 500px) {
+    .bottom-content div{
+    width: 100%;
+    }
 }
 
 .product {
@@ -214,4 +246,3 @@ header nav a:last-child{
 	margin-top: 20px;
 	margin-bottom: 20px;
 }
-
