--- a/css/index.css
+++ b/css/index.css
@@ -84,7 +84,7 @@ h1, h2, h3, h4, h5 {
 
 @media (max-width: 500px) {
     .containter {
-        width: 90%;
+        width: 100%;
     }
 }
 
@@ -128,7 +128,6 @@ header nav a{
     text-align: center;
     width: 100%;
     order: ;
-    border-top: 1px solid black;
     border-bottom: 1px solid black;
     padding: 20px;
     margin: 0;
@@ -137,7 +136,15 @@ header nav a{
 
 @media (max-width: 800px) {
     header img{
-        margin: 20px;
+    margin: 20px;
+    }
+}
+
+@media (max-width: 500px) {
+    header img{
+    padding: 20px 120px;
+    margin: 0;
+    border-bottom: 1px solid black;
     }
 }
 
@@ -168,7 +175,7 @@ header nav a:last-child{
 
 @media (max-width: 800px) {
     .top-content div.left{
-        width: 100%;
+    width: 100%;
     }
 }
 
@@ -198,7 +205,8 @@ header nav a:last-child{
 
 @media (max-width: 500px) {
     .middle-content div{
-        width: 900%;
+    width: 100%;
+    margin-left: 0;
     }
 }
 
@@ -213,6 +221,13 @@ header nav a:last-child{
 @media (max-width: 800px) {
     .bottom-content {
     display: flex;
+    }
+}
+
+@media (max-width: 500px) {
+    .bottom-content {
+    flex-direction: column;
+    
     }
 }
 
