--- a/css/index.css
+++ b/css/index.css
@@ -79,12 +79,14 @@ h1, h2, h3, h4, h5 {
 @media (max-width: 800px) {
     .container {
         width: 90%;
+        hight: auto;
     }
 }
 
 @media (max-width: 500px) {
     .containter {
         width: 100%;
+        height: auto;
     }
 }
 
@@ -106,6 +108,7 @@ header nav{
 
 @media (max-width: 500px) {
     header nav {
+    flex-direction: column;
     padding-top: 0;
     }
 }
@@ -120,6 +123,11 @@ header nav a{
 @media (max-width: 800px) {
     header nav a{
     margin-top: 20px;
+    }
+}
+@media (max-width: 500px) {
+    header nav img.logo {
+    order: -1;
     }
 }
 
@@ -226,8 +234,7 @@ header nav a:last-child{
 
 @media (max-width: 500px) {
     .bottom-content {
-    flex-direction: column;
-    
+    flex-direction: column;   
     }
 }
 
@@ -242,6 +249,7 @@ header nav a:last-child{
 	display: inline-block;
 }
 
+
 @media (max-width: 500px) {
     .bottom-content div{
     width: 100%;
@@ -249,11 +257,23 @@ header nav a:last-child{
 }
 
 .product {
-	margin-left: 40px;
+	margin-left: 0px;
+}
+
+@media (max-width: 500) {
+    .product {
+    margin-left: 0; 
+    }
 }
 
 .vision{
-	margin-left: 40px;
+	margin-left: 0px;
+}
+
+@media (max-width: 500) {
+    .vision {
+    margin-left: 0; 
+    }
 }
 
 .copyright {
